--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="ISO-8859-1" />
     <meta name="viewport" content="width=device-width" />
-    <link href="temp.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>&lt;title&gt; element</title>
   </head>
   <body>
-    <header>
-      <div class="header_social">
+    <nav class="nav">
+      <div class="nav_social">
         <a href="https://github.com/alus1337" title="Alus's github page">
           <img src="images/github.png" alt="github cat logo" />
         </a>
 
         <a href="https://discord.com/">
-          <img src="images/discord.png" alt="discord logo"/>
+          <img src="images/discord.png" alt="discord logo" />
         </a>
       </div>
 
-      <div class="header_name">
-        <h1>Alus's specification</h1>
+      <div class="nav_name">
+        <h1 style="display: inline">Alus's specification</h1>
       </div>
 
-      <div class="header_social">
+      <div class="nav_social">
         <input type="text" placeholder="Search here..." />
       </div>
-    </header>
+    </nav>
   </body>
 </html>
