--- a/index.html
+++ b/index.html
@@ -26,5 +26,54 @@
         <input type="text" placeholder="Search here..." />
       </div>
     </nav>
+
+    <div class="content_wrapper">
+      <nav class="sidebar">
+        <h2 id="sidebar_title">
+          <a href="">Quick navigation</a>
+        </h2>
+        <ul>
+          <li>
+            <a href="">Example</a>
+          </li>
+
+          <li>
+            <a href="">Example</a>
+          </li>
+
+          <li>
+            <a href="">Example</a>
+          </li>
+        </ul>
+      </nav>
+
+      <main class="main_content">
+        <section>
+          <h2>Recetly Added</h2>
+
+          <ul>
+            <li>
+              <a href="">asd</a>
+            </li>
+
+            <li>
+              <a href="">asd</a>
+            </li>
+
+            <li>
+              <a href="">asd</a>
+            </li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Common Visits</h2>
+        </section>
+
+        <section>
+          <h2>Last Viewed</h2>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
